# Q2_25_Builder_DiegoOliva

Prereq(s)/airdrop/: .gitignore  airdrop.ts  enroll.ts  fetch-idl.ts  keygen.ts  package.json  transfer.ts  tsconfig.json
Prereq(s)/airdrop/programs/: Turbin3_prereq.ts
Prereq(s)/enrollment-dapp-rust/: Cargo.toml  Turbin3-wallet.json  dev-wallet.json
Prereq(s)/enrollment-dapp-rust/src/: lib.rs
Prereq(s)/enrollment-dapp-rust/src/programs/: turbin3_prereq.rs
capstone_senda/senda-dapp/: middleware.ts  next.config.ts  tsconfig.node.json
capstone_senda/senda-dapp/prisma/: schema.prisma
capstone_senda/senda-smartc/: .gitignore  Anchor.toml
capstone_senda/senda-smartc/tests/: senda-smartc.ts
senda-dapp/: .gitignore  README.md  next.config.ts  package.json  tsconfig.json
senda-dapp/prisma/: schema.prisma
senda-dapp/programs/senda_dapp/: .gitignore  Anchor.toml  Cargo.toml
senda-dapp/src/app/: globals.css  layout.tsx  page.tsx
senda-dapp/src/components/: app-providers.tsx  confirmation-view.tsx  react-query-provider.tsx
senda-dapp/src/hooks/: use-auth-redirects.ts  use-auth.ts  use-debounce.ts  use-sign-out.ts
senda-dapp/src/lib/: db.ts
senda-dapp/src/scripts/: init-factory.ts
senda-dapp/src/stores/: use-deposit-form.ts  use-senda-program.ts
senda-dapp/src/types/: next-auth.d.ts  senda-program.ts  transaction.ts
week_2/amm/: Anchor.toml
week_2/escrow/: Anchor.toml
week_2/vault/: Anchor.toml
week_2/vault/programs/vault/: Cargo.toml
week_2/vault/programs/vault/src/: lib.rs
week_3/marketplace/: Anchor.toml
week_3/staking/: Anchor.toml
(+155 files in other folders)
