[package]
name = "enrollment-dapp-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-sdk = "1.15.2"
bs58 = "0.5.0"
solana-client = "1.15.2"
solana-program = "1.15.2"
borsh = "0.10.3"
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }
serde_json = "1.0"
zstd = "0.12"
anchor-client = "0.28.0"